--- a/Style.css/Style.css
+++ b/Style.css/Style.css
@@ -4,8 +4,10 @@
 }
 
 .Luzdocaminho{
-    margin:60px;
+    
     text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
@@ -45,6 +47,8 @@ a:hover {
     margin-right: 150%;
     display: block;
     margin: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner {
@@ -69,27 +73,41 @@ a:hover {
     font-size: 18px;
     width: 100%;
     height: 2000px;
-    margin: auto;
-}    
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+  
 
 #nossosseviços{
     font-size: 18px;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .serviços{
     font-size: 18px;
+    justify-content: center;
+    align-items: center;
 }
+
 
 #Comofunciona{
     font-size: 18px;
+    justify-content: center;
+    align-items: center;
 }
+
 
 #funcionamento{
     font-size: 18px;
+    justify-content: center;
+    align-items: center;
 }
+
 
 #serviçodeatendimento{
     font-size: 18px;
     justify-content: center;
+    align-items: center;
 }
