--- a/Style.css/Style.css2/Style.css
+++ b/Style.css/Style.css2/Style.css
@@ -1,13 +1,18 @@
-#Quemsomos{
+.titulos{
     color: rgb(0, 160, 16);
     font-size: 30px;
-    
+    justify-content: center;
+    align-items: center;
 }
+    
 
-#texto1{
+.texto{
     width: 100%;
     height: 100px;
-    margin: auto;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    
 }
 #vídeo{
     display: flex;
@@ -16,4 +21,5 @@
     gap: 15px;
     margin-left: 1100px;
     padding: 10px;
+
 }
