--- a/Style.css/Style.css2/Style.css
+++ b/Style.css/Style.css2/Style.css
@@ -12,6 +12,9 @@
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    display: flex;
+    flex-direction: row;
+
     
 }
 #vídeo{
